# mcp_d

./: .gitignore  CV_Daniil_Lukyanenko.md  MCP_ECOSYSTEM_GUIDELINES.md  MCP_SERVERS_COMPLIANCE_CHECKLIST.md  QUICK_TODO.md  README.md
halv1/: .gitignore  AGENTS.md  MARKETAPP_INDEXING.md  README.md  README_TESTING.md  allowed_chats.txt  auth_telethon.py  bot_state.json  create_search_index.py  downloaded_chats.txt  main.py  pyproject.toml  pytest.ini  quick_start.py  requirements.txt  requirements_search.txt  run_all_tests.py  search_interface.py  telegram_auth.py  test_bot_debug.py  test_bot_quick.py  test_bot_real.py  test_interactive_alerts.py  test_interactive_alerts_simple.py
halv1/agent/: README.md  __init__.py  actions.py  adaptation.py  cli.py  commands.py  coordinator.py  core.py  dedup.py  multistep.py  tool_protocol.py
halv1/agent/modules/: __init__.py  base.py  context_aware_base.py  emotions_module.py  events_module.py  themes_module.py
halv1/bot/: persistence.py  reindex_handlers.py  telegram_bot.py  telegram_utils.py  telethon_handlers.py  theme_callbacks.py  theme_chat_callbacks.py  theme_commands.py  trading_alert_handler.py  utils.py
halv1/config/: policies.yaml  prompts.yaml  settings.yaml  summary_interval.yaml  warnings_config.py
halv1/core/: __init__.py  agent.py  goal_validator.py  step_runner.py
halv1/core/utils/: __init__.py  json_io.py
halv1/db/raw_backup/: 2017-12-30.json  2020-03-21.json  (+93 more)
halv1/docs/: ARCHITECTURE.md  IMPROVEMENT_PLAN.md  INDEX.md  INTERACTIVE_TRADING_ALERTS.md  MCP_INTEGRATION.md  MEMORY2_Typed_Graph_Memory.md  MEMORY_MIGRATION_PLAN.md  METRICS_IMPLEMENTATION.md  OLLAMA_OPTIMIZATION_GUIDE.md  OPTIMIZATION_AND_MEMORY_STRATEGY.md  TESTING.md  UX_DESIGN.md
halv1/events/: models.py
halv1/examples/: prompt_system_example.py
halv1/executor/: __init__.py  code_executor.py  code_generator.py  config_loader.py  docker_executor.py  factory.py  mcp_executor.py  mcp_shell_executor.py
halv1/finance/: finrl_agent.py
halv1/index/: bm25_index.py  chronicle.py  chunk_indexer.py  chunking.py  cluster_analysis.py  cluster_manager.py  cluster_model.py  cluster_persistence.py  faiss_backend.py  insight_store.py  preprocess.py  ranking.py  raw_storage.py  storage.py  summarizer.py  telethon_indexer.py  theme_store.py  vector_index.py
halv1/internet/: __init__.py  search_client.py
halv1/llm/: __init__.py  base_client.py  context_aware_client.py  context_factory.py  embeddings_client.py  factory.py  hot_reload.py  lmstudio_client.py  ollama_client.py  prompt_manager.py  prompts.py  utils.py
halv1/memory/: __init__.py  archive.py  episode_graph.py  episodic_buffer.py  fts5_index.py  hnsw_index.py  mcp_memory_adapter.py  memory_service_adapter.py  memory_store.py  models.py  profile_store.py  schemas.py  service.py  unified_memory.py  write_pipeline.py
halv1/metrics/: __init__.py  noop.py  registry.py
halv1/planner/: __init__.py  dag_executor.py  models.py  task_planner.py
halv1/retriever/: __init__.py  context_builder.py  cross_encoder.py  index_protocol.py  insight_utils.py  pipeline.py  query_with_feedback.py  retriever.py
halv1/scripts/: Dockerfile  README.md  README_TELETHON_AUTH.md  auth.sh  auth_telethon.sh  auth_telethon_final.sh  brightdata_mcp_wrapper.sh  consolidate.py  dedup_messages.py  diagnose_telethon.sh  docker-compose.yml  index_marketapp_chats.py  install_models.sh  load_env_and_auth.py  migrate_memory_store.py  restart_bot_safe.sh  run_colima.sh  run_docker.sh  run_modular_tests.py  run_tests_no_warnings.py  setup_ollama_env.sh  simple_flash_attention_test.py  telethon_auth.py  telethon_auth_env.py  telethon_auth_final.py  telethon_auth_simple.py  test_context_integration_main.py  test_gemma3n_prompts.py  test_gpt_oss_parameters.py  test_improved_prompts.py  test_performance.py  test_performance_optimizations.py  test_telethon_session.py  test_think_api.py
halv1/security/: __init__.py  apparmor_profile  policy_engine.py  seccomp_profile.json
halv1/services/: chronicle_service.py  event_bus.py  event_bus_common.py  event_bus_impl.py  event_bus_optimized.py  monitoring.py  summary_service.py  supervisor_client.py  telethon_indexing.py  telethon_service.py
halv1/storage/: __init__.py  trading.py
halv1/tasks/: scheduler.py
halv1/tests/: README.md  conftest.py  run_bot_tests.py  run_integration_tests.py  run_tests.py  test_docker_executor_network.py  test_docker_network.py  test_multi_step_debug.py  test_supervisor_integration.py
halv1/tools/: __init__.py  args.py  registry.py  types.py
halv1/utils/: artifacts.py  message_extractor.py  performance.py  vector_math.py
servers/backtesting-mcp/: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  mcp_server.py  pyproject.toml  run_server.py
servers/binance-mcp/: .coverage  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  coverage.xml  mcp_server.py  pyproject.toml
servers/coqui-tts-mcp/: .gitignore  AGENTS.md  CHANGELOG.md  QUICK_START.md  README.md  com.hal.coqui-tts-mcp.plist  pyproject.toml  run_server.py
servers/learning-mcp/: .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.new  README.md  pyproject.toml  run_server.py
servers/memory-mcp/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CURRENT_STATUS.md  Dockerfile  LLM_ENTITY_VALIDATION.md  LLM_VALIDATION_DETAILED.md  LLM_VALIDATION_PROCESS.md  MISSING_FEATURES_ANALYSIS.md  Makefile  NEXT_STEPS.md  QUALITY_IMPROVEMENTS.md  QUALITY_IMPROVEMENT_ANALYSIS.md  QUALITY_IMPROVEMENT_PLAN.md  README.md  config.json  mcp.plan.md  mcp_server.py  pyproject.toml  run_server.py
servers/orchestrator-mcp/: .env.example  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
servers/policy-mcp/: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
servers/shell-mcp/: .coverage  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.new  README.md  coverage.xml  mcp_server.py  pyproject.toml
servers/supervisor-mcp/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.new  README.md  pyproject.toml
(+3849 files in other folders)
