[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
extend-exclude = ["README.md", "docs/architecture.md"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = '3.11'
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "halv1"
version = "0.1.0"
description = "HAL AI Agent"
requires-python = ">=3.11"

[project.optional-dependencies]
hnsw = ["hnswlib>=0.7"]
