[project]
name = "backtesting-mcp"
version = "0.2.0"
description = "Model Context Protocol server for running strategy backtests and optimizations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "fastapi>=0.120.0",
    "fastapi-mcp>=0.1.0",
    "uvicorn>=0.35.0",
    "optuna>=3.6.0",
    "optuna-dashboard>=0.16.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "scipy>=1.10.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
backtesting-mcp = "backtesting_mcp.server:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
